update: html changes

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="sliderContent">
           <section>
           <h1>GROCERIES DELIVERY</h1>
-          <p>We know how large objects will act, but things on a
+          <p>We know how large objects will act, but things on a <br/>
               small scale just do not act that way.</p>
             <button class="bigButton Button">Start Now</button>
           </section>
@@ -95,16 +95,18 @@
       <header>
         <h5>BESTSELLER PRODUCTS</h5>
         <ul>
-          <li>Men</li>
-          <li>Women</li>
-          <li>Acessories</li>
+          <li><h6 class="selectedFurniture">Men</h6></li>
+          <li><h6>Women</h6></li>
+          <li><h6>Acessories</h6></li>
         </ul>
 
-        <img src="./images/arrowLeftFurniture.svg" alt="Arrow left Furniture icon" />
-        <img src="./images/arrowRightFurniture.svg" alt="Arrow right Furniture icon" />
+        <div>
+          <img src="./images/arrowLeftFurniture.svg" alt="Arrow left Furniture icon" />
+          <img src="./images/arrowRightFurniture.svg" alt="Arrow right Furniture icon" />
+        </div>
+        
       </header>
-
-      <div>
+      <div class="productsFurniture">
         <section class="productFurniture">
           <img src="./images/productImage01.png" alt="Product image 01">
           <h5>Produto 01</h5>
