feat: changing elements in funiture

--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
 
       <header>
         <h5>BESTSELLER PRODUCTS</h5>
-        <ul>
+        <ul id="furnitureClasses01">
           <li>
-            <h6 class="selectedFurniture">Men</h6>
+            <h6>Men</h6>
           </li>
           <li>
             <h6>Women</h6>
@@ -119,69 +119,13 @@
         </ul>
 
         <div>
-          <img src="./images/arrowLeftFurniture.svg" alt="Arrow left Furniture icon" />
-          <img src="./images/arrowRightFurniture.svg" alt="Arrow right Furniture icon" />
+          <img id="arrowLeftFurniture01" src="./images/arrowLeftFurniture.svg" alt="Arrow left Furniture icon" />
+          <img id="arrowRightFurniture01" src="./images/arrowRightFurniture.svg" alt="Arrow right Furniture icon" />
         </div>
 
       </header>
-      <div>
-        <section class="productFurniture">
-          <img src="./images/productImage01.png" alt="Product image 01">
-          <h5>Produto 01</h5>
-          <a href="">Produtos tal</a>
-          <div class="prices">
-            <h5 class="realPrice">$16.48</h5>
-            <h5 class="discountPrice">$6.48</h5>
-          </div>
-        </section>
+      <div id="productsFurniture01">
 
-        <section class="productFurniture">
-          <img src="./images/productImage02.png" alt="Product image 01">
-          <h5>Produto 01</h5>
-          <a href="">Produtos tal</a>
-          <div class="prices">
-            <h5 class="realPrice">$16.48</h5>
-            <h5 class="discountPrice">$6.48</h5>
-          </div>
-        </section>
-
-        <section class="productFurniture">
-          <img src="./images/productImage03.png" alt="Product image 01">
-          <h5>Produto 01</h5>
-          <a href="">Produtos tal</a>
-          <div class="prices">
-            <h5 class="realPrice">$16.48</h5>
-            <h5 class="discountPrice">$6.48</h5>
-          </div>
-        </section>
-
-        <section class="productFurniture">
-          <img src="./images/productImage01.png" alt="Product image 01">
-          <h5>Produto 01</h5>
-          <a href="">Produtos tal</a>
-          <div class="prices">
-            <h5 class="realPrice">$16.48</h5>
-            <h5 class="discountPrice">$6.48</h5>
-          </div>
-        </section>
-        <section class="productFurniture">
-          <img src="./images/productImage02.png" alt="Product image 01">
-          <h5>Produto 01</h5>
-          <a href="">Produtos tal</a>
-          <div class="prices">
-            <h5 class="realPrice">$16.48</h5>
-            <h5 class="discountPrice">$6.48</h5>
-          </div>
-        </section>
-        <section class="productFurniture">
-          <img src="./images/productImage03.png" alt="Product image 01">
-          <h5>Produto 01</h5>
-          <a href="">Produtos tal</a>
-          <div class="prices">
-            <h5 class="realPrice">$16.48</h5>
-            <h5 class="discountPrice">$6.48</h5>
-          </div>
-        </section>
       </div>
 
 
@@ -280,9 +224,9 @@
 
       <header>
         <h5>BESTSELLER PRODUCTS</h5>
-        <ul>
+        <ul id="furnitureClasses02">
           <li>
-            <h6 class="selectedFurniture">Men</h6>
+            <h6>Men</h6>
           </li>
           <li>
             <h6>Women</h6>
@@ -293,69 +237,13 @@
         </ul>
 
         <div>
-          <img src="./images/arrowLeftFurniture.svg" alt="Arrow left Furniture icon" />
-          <img src="./images/arrowRightFurniture.svg" alt="Arrow right Furniture icon" />
+          <img id="arrowLeftFurniture02" src="./images/arrowLeftFurniture.svg" alt="Arrow left Furniture icon" />
+          <img id="arrowRightFurniture02" src="./images/arrowRightFurniture.svg" alt="Arrow right Furniture icon" />
         </div>
 
       </header>
-      <div>
-        <section class="productFurniture">
-          <img src="./images/productImage01.png" alt="Product image 01">
-          <h5>Produto 01</h5>
-          <a href="">Produtos tal</a>
-          <div class="prices">
-            <h5 class="realPrice">$16.48</h5>
-            <h5 class="discountPrice">$6.48</h5>
-          </div>
-        </section>
-
-        <section class="productFurniture">
-          <img src="./images/productImage02.png" alt="Product image 01">
-          <h5>Produto 01</h5>
-          <a href="">Produtos tal</a>
-          <div class="prices">
-            <h5 class="realPrice">$16.48</h5>
-            <h5 class="discountPrice">$6.48</h5>
-          </div>
-        </section>
-
-        <section class="productFurniture">
-          <img src="./images/productImage03.png" alt="Product image 01">
-          <h5>Produto 01</h5>
-          <a href="">Produtos tal</a>
-          <div class="prices">
-            <h5 class="realPrice">$16.48</h5>
-            <h5 class="discountPrice">$6.48</h5>
-          </div>
-        </section>
-
-        <section class="productFurniture">
-          <img src="./images/productImage01.png" alt="Product image 01">
-          <h5>Produto 01</h5>
-          <a href="">Produtos tal</a>
-          <div class="prices">
-            <h5 class="realPrice">$16.48</h5>
-            <h5 class="discountPrice">$6.48</h5>
-          </div>
-        </section>
-        <section class="productFurniture">
-          <img src="./images/productImage02.png" alt="Product image 01">
-          <h5>Produto 01</h5>
-          <a href="">Produtos tal</a>
-          <div class="prices">
-            <h5 class="realPrice">$16.48</h5>
-            <h5 class="discountPrice">$6.48</h5>
-          </div>
-        </section>
-        <section class="productFurniture">
-          <img src="./images/productImage03.png" alt="Product image 01">
-          <h5>Produto 01</h5>
-          <a href="">Produtos tal</a>
-          <div class="prices">
-            <h5 class="realPrice">$16.48</h5>
-            <h5 class="discountPrice">$6.48</h5>
-          </div>
-        </section>
+      <div id="productsFurniture02">
+       
       </div>
 
 
@@ -564,6 +452,7 @@
       </div>
     </article>
   </main>
+
   <footer id="siteFooter">
     <section>
       <div>
