update: mechanics of the page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h3>Bandage</h3>
       <ul>
         <li><a href="">Home</a></li>
-        <li> <a href="" class="selectedHeader">Shop</a> <img src="./images/arrowdown.svg" alt="Arrow down icon" /></li>
+        <li class="selectedHeader"> <a href="" >Shop</a> <img src="./images/arrowdown.svg" alt="Arrow down icon" /></li>
         <li> <a href="">About</a></li>
         <li><a href="">Blog</a></li>
         <li><a href="">Contact</a></li>
@@ -250,6 +250,7 @@
     </article>
 
     <article class="mostPopularArticle mostPopularInverted">
+      <img src="./images/cardCover04.png" alt="Product image tutorial">
       <section>
         <h3>
           MOST POPULAR
@@ -259,7 +260,6 @@
           you where you work. It's only a
           keystroke away.
         </p>
-        <img src="./images/productMostPopular02.png" alt="Product image 01">
         <a href="">English Department</a>
         <div class="mostPopularSales">
           <img src="./images/downloadIcon.svg" alt="Download icon">
@@ -277,8 +277,6 @@
           <div class="circle black"></div>
         </div>
       </section>
-      <img src="./images/cardCover04.png" alt="Product image tutorial">
-
     </article>
 
     <article id="bestSellersProducts">
@@ -464,7 +462,7 @@
         </p>
       </div>
 
-      <button class="btn-text">
+      <button class="btnText">
         Contact Us
       </button>
     </section>
