--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <title>Desafio 02</title>
-  <script src="dist/bundle.js" defer></script>
-<script defer src="/dist/bundle.js"></script></head>
+  <script defer src="./bundle.js"></script>
+</head>
 
 <body>
   <header id="pageHeader">
@@ -20,7 +20,7 @@
       <h3>Bandage</h3>
       <ul>
         <li><a href="">Home</a></li>
-        <li class="selectedHeader"> <a href="" >Shop</a> <img src="./images/arrowdown.svg" alt="Arrow down icon" /></li>
+        <li class="selectedHeader"> <a href="">Shop</a> <img src="./images/arrowdown.svg" alt="Arrow down icon" /></li>
         <li> <a href="">About</a></li>
         <li><a href="">Blog</a></li>
         <li><a href="">Contact</a></li>
@@ -243,7 +243,7 @@
 
       </header>
       <div id="productsFurniture02">
-       
+
       </div>
 
 
