--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <title>Desafio 02</title>
-  <script type="module" src="./data.js"></script>
+  <script type="module" src="./app.js"></script>
 </head>
 
 <body>
